feat: pay oblituary funtionality